# receipt-splitting-bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .ignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  compose.yaml  flake.nix  main.py  production.compose.yaml  pyproject.toml  shell.nix
.github/workflows/: cd.yml  ci.yml
docs/: About bills presentation.md  Chat states.md  README.md  agent_use.md  database_choosing.md  domain_models.md  sequences.md  user_flows.md
docs/Decisions/: asr comparation.md  databases comparison.md  llm comparation.md  metrics calculation.md  ocr comparation.md  private vs group chat.md  reasoning comparation.md
docs/Design/: aiogram states.md  architecture overview.md
docs/Domain/: domain models.md  user flows.md
infra/: create-multiple-postgresql-databases.sh
metrics/agent_metrics/metrics_execution/: executor.py  main.py
metrics/agent_metrics/metrics_generation/: generator.py  main.py  texts.py
metrics/asr_metrics/: main.py
metrics/data/: item_metrics.jsonl  summary.jsonl  tests.jsonl
metrics/data/agent_metrics/: tests.jsonl
metrics/data/asr_metrics/: metrics.json
metrics/data/ocr_metrics/: metrics.json
metrics/metrics_execution/: executor.py  executor.py.save  main.py
metrics/metrics_generation/: generator.py  main.py  model_provider.py  texts.py
metrics/metrics_generation/data/: tests.jsonl
metrics/ocr_metrics/: main.py
metrics/utils/: f1.py  levenstein.py
migrations/: env.py
migrations/versions/: 2026-01-28_init_eea91135e372.py  2026-02-05_make_chat_id_unique_eea13fd342c1.py  2026-05-10_make_item_amount_percise_13_5_15735f316d55.py
src/: main.py  settings.py
src/adapters/: asr.py  image_decoder.py  image_recognition.py  locks.py  ocr.py  receipt_provider.py  user_provider.py
src/adapters/agent/: agent.py  context.py  (+4 more)
src/application/: add_dummy_user.py  create_receipt.py  image_decoder.py  image_recognition.py  list_receipts.py  onboard.py  user_provider.py
src/domain/: exceptions.py  value_objects.py
src/settings/: __init__.py  agent_checkpointer.py  database.py  globals.py  key_value.py  open_router.py  receipt_lock.py  telegram.py
tests/: conftest.py
tests/adapters/: asserts.py  conftest.py  test_receipt_gateway.py  test_user_gateway.py  test_user_provider.py
tests/application/: conftest.py  test_add_dummy_user.py  test_change_nickname.py  test_create_receipt.py  test_list_receipts.py  test_onboard_user.py  test_register_user.py
tests/domain/: asserts.py  conftest.py  test_models.py  test_services.py
tests/mocks/: domain.py
(+105 files in other folders)
